# cesar-mlops

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  acceptance_tests.py  batch.py  main.py  predict_one.py
comparison/: __init__.py
comparison/api_version_comparison/: __init__.py  compare_config_schema.py  run_comparison.py
data/: dvf_75115_000CM.csv
deployment/: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml
deployment/kubernetes/: README.md  api-deployment-blue.yaml  api-deployment-canary.yaml  api-deployment-green.yaml  api-deployment.yaml  api-service-blue-green.yaml  api-service-canary.yaml  api-service.yaml  ui-deployment.yaml  ui-service.yaml
model_acceptance_tests/: __init__.py  __main__.py  run_against_api.py  test_case_schema.py  test_cases.py
prediction_contract/: __init__.py  contract_version.py  feature_schema.py  request_schema.py  response_schema.py
runtime/: __init__.py
runtime/batch_prediction/: __init__.py  read_input_csv.py  run_estimates.py  write_output_csv.py
runtime/inference/: __init__.py  estimate_from_artifact.py  load_artifact.py
runtime/prediction_api/: __init__.py  app.py
runtime/rating_ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
runtime/rating_ui/src/: api_client.ts  display_estimate.ts  form_property_params.ts  main.ts  map_france.ts
training/: __init__.py  experiment_log.py
training/asset_rating_model/: __init__.py  train_and_export.py
training/scripts/: __init__.py  train_from_minimal_csv.py
